--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "clsx": "2.1.1",
     "date-fns": "^4.1.0",
     "lightweight-charts": "^5.1.0",
+    "lodash": "^4.17.23",
     "lucide-react": "^0.563.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-grid-layout": "^2.2.2",
     "recharts": "^3.7.0",
     "tailwind-merge": "3.4.0",
     "uuid": "^13.0.0"
