--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
+    "@types/react-grid-layout": "^1.3.6",
     "@types/uuid": "^10.0.0",
     "clsx": "2.1.1",
     "date-fns": "^4.1.0",
